[project]
name = "displacementmaptools"
description = "NODES: Extract Displacement Map Node, Displace Logo"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=2.0.0", "torchvision>=0.15.0", "numpy>=1.22.0", "Pillow>=9.0.0"]

[project.urls]
Repository = "https://github.com/risunobushi/ComfyUI_DisplacementMapTools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_DisplacementMapTools"
Icon = ""
